<resources>
    <string name="app_name">Note</string>
    <string name="Current_Note">CURRENT_NOTE</string>
    <string name="T_addNote">Добавить запись</string>
    <string name="end_line">End line</string>
    <string name="E_hint">Содержимое заметки</string>
    <string name="T_sub">Оформление</string>
    <string name="E_name_hint">Название заметки</string>
    <string name="T_data">Дата</string>
    <string name="T_ok">Ок</string>
    <string name="B_delete">Удалить</string>
    <string name="B_change">Редактировать</string>
    <string name="B_sort">Отсортировать</string>
    <string name="Title">Записи</string>
    <string name="Help">Справка</string>
    <string name="Help_title1">Мои записи</string>
    <string name="Help_title2">Краткий справочник</string>
    <string name="Help_group1_00">Окно заметок</string>
    <string name="Help_group1_01">Добавить - перейти к окну создания заметки</string>
    <string name="Help_group1_02">Клик по заметке - просмотр содержимого</string>
    <string name="Help_group1_03">Удержание но заметке - редактирование:</string>
    <string name="Help_group1_04"><![CDATA[     > Удаление - заметка стирается]]></string>
    <string name="Help_group1_05"><![CDATA[     > Редактирование - перейти к окну изменения]]></string>
    <string name="Help_group2_00">Окно создания/редактировния</string>
    <string name="Help_group2_01">Дата - задать заметке конкретное дату</string>
    <string name="Help_group2_02">Название - название заметки в списке</string>
    <string name="Help_group2_03">Тип - оформление для придания важности</string>
    <string name="Help_group2_04">Содержимое - подробная запись заметки</string>
    <string name="Exit">Выход</string>
    <string name="head">Head</string>
    <string name="ND_OPEN">ND_OPEN</string>
    <string name="ND_CLOSE">ND_CLOSE</string>
    <string name="after_sort">Отсортированно</string>
    <string name="del_confirm">Вы уверены что хотите удалить запись?</string>
    <string name="deletion">Удаление</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="menu_fload">Загрузить из облака</string>
</resources>